# arrow-partial-aggr

./: .gitattributes  README.md  meson.build
resources/: PKGBUILD
src/: ops.cpp  ops.hpp  simple.cpp  simple.hpp
